--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "[5 rows x 43 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,16 +502,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['flag', 'service', 'protocol_type']"
+       "['service', 'flag', 'protocol_type']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
     "\n",
     "df = df[[col for col in df if df[col].nunique() > 1]]# keep columns where there are more than 1 unique values\n",
     "\n",
-    "matrix = df\n",
+    "matrix = df.copy()\n",
     "matrix = matrix.select_dtypes(include=['number'])\n",
     "\n",
     "corr = matrix.corr()\n",
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -724,9 +724,9 @@
      "output_type": "stream",
      "text": [
       "protocol_type\n",
-      "0    283602\n",
-      "1    190065\n",
-      "2     20354\n",
+      "icmp    283602\n",
+      "tcp     190065\n",
+      "udp      20354\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -741,7 +741,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop('service',axis = 1,inplace= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -770,6 +779,222 @@
     "\n",
     "fmap = {'SF':0,'S0':1,'REJ':2,'RSTR':3,'RSTO':4,'SH':5 ,'S1':6 ,'S2':7,'RSTOS0':8,'S3':9 ,'OTH':10}\n",
     "df['flag'] = df['flag'].map(fmap)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Time to train with different models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(494021, 31)\n",
+      "(330994, 30) (163027, 30)\n",
+      "(330994, 1) (163027, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = df.drop(['target',], axis=1)\n",
+    "print(df.shape)\n",
+    "\n",
+    "# Target variable and train set\n",
+    "Y = df[['Attack Type']]\n",
+    "X = df.drop(['Attack Type',], axis=1)\n",
+    "\n",
+    "sc = MinMaxScaler()\n",
+    "X = sc.fit_transform(X)\n",
+    "\n",
+    "# Split test and train data \n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.33, random_state=42)\n",
+    "print(X_train.shape, X_test.shape)\n",
+    "print(Y_train.shape, Y_test.shape)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Gaussian NB model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train score is: 0.8795114110829804\n",
+      "Test score is: 0.8790384414851528\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "model1 = GaussianNB()\n",
+    "model1.fit(X_train, Y_train.values.ravel())\n",
+    "Y_test_pred1 = model1.predict(X_test)\n",
+    "\n",
+    "print(\"Train score is:\", model1.score(X_train, Y_train))\n",
+    "print(\"Test score is:\",model1.score(X_test,Y_test))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Decision Tree model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train score is: 0.9905829108684749\n",
+      "Test score is: 0.9905230421954646\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "model2 = DecisionTreeClassifier(criterion=\"entropy\", max_depth = 4)\n",
+    "model2.fit(X_train, Y_train.values.ravel())\n",
+    "Y_test_pred2 = model2.predict(X_test)\n",
+    "\n",
+    "print(\"Train score is:\", model2.score(X_train, Y_train))\n",
+    "print(\"Test score is:\",model2.score(X_test,Y_test))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Random Forest model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train score is: 0.99997583037759\n",
+      "Test score is: 0.9996442307102504\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "model3 = RandomForestClassifier(n_estimators=30)\n",
+    "model3.fit(X_train, Y_train.values.ravel())\n",
+    "Y_test_pred3 = model3.predict(X_test)\n",
+    "\n",
+    "print(\"Train score is:\", model3.score(X_train, Y_train))\n",
+    "print(\"Test score is:\",model3.score(X_test,Y_test))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. SVC model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train score is: 0.9987552644458811\n",
+      "Test score is: 0.9987916112055059\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "model4 = SVC(gamma = 'scale')\n",
+    "model4.fit(X_train, Y_train.values.ravel())\n",
+    "Y_test_pred4 = model4.predict(X_test)\n",
+    "\n",
+    "print(\"Train score is:\", model4.score(X_train, Y_train))\n",
+    "print(\"Test score is:\", model4.score(X_test,Y_test))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Logistic Regression model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train score is: 0.9935285835997028\n",
+      "Test score is: 0.9935286792985211\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "model5 = LogisticRegression(max_iter=1200000)\n",
+    "model5.fit(X_train, Y_train.values.ravel())\n",
+    "Y_test_pred5 = model5.predict(X_test)\n",
+    "\n",
+    "print(\"Train score is:\", model5.score(X_train, Y_train))\n",
+    "print(\"Test score is:\",model5.score(X_test,Y_test))"
    ]
   },
   {
